register page ui created

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
                 >
                   <div class="input-group-prepend">
                     <span class="input-group-text border-light text-muted">
-                      <i style="color: white" class="fa fa-user"></i>
+                      <i style="color: white" class="fa-regular fa-user"></i>
                     </span>
                   </div>
                   <input
