--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -31,7 +31,7 @@
 }
 .formDiv {
   background-color: #262e35;
-  height: 50vh;
+  height: 100%;
   width: 30vw;
   padding: 8%;
   border-radius: 5px;
