--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,20 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+
+
+i{
+  color: #a6b0cf;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  color: #e1e9f1;
+  font-family: "Public Sans", sans-serif;
+  font-weight: 600;
+}
+
+.text-muted {
+  --bs-text-opacity: 1;
+  color: #9aa1b9;
+}
