--- a/src/app/components/side-components/profile/profile.component.html
+++ b/src/app/components/side-components/profile/profile.component.html
@@ -3,39 +3,45 @@
     <div class="user-chat-nav float-end">
       <div class="dropdown">
         <a
+          _ngcontent-wyq-c114=""
+          href="javascript: void(0);"
           ngbdropdowntoggle=""
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
           class="dropdown-toggle font-size-18 text-muted"
         >
-          <i class="ri-more-2-fill"></i>
+          <i _ngcontent-wyq-c114="" class="ri-more-2-fill"></i>
         </a>
 
-        <div class="dropdown-menu dropdown-menu-right">
+        <div
+          _ngcontent-wyq-c114=""
+          ngbdropdownmenu=""
+          class="dropdown-menu dropdown-menu-right"
+        >
           <a
-            _ngcontent-hly-c114=""
+            _ngcontent-wyq-c114=""
             href="javascript:void(0);"
             class="dropdown-item"
             >Edit</a
           >
           <a
-            _ngcontent-hly-c114=""
+            _ngcontent-wyq-c114=""
             href="javascript:void(0);"
             class="dropdown-item"
             >Action</a
           >
-          <div _ngcontent-hly-c114="" class="dropdown-divider"></div>
+          <div _ngcontent-wyq-c114="" class="dropdown-divider"></div>
           <a
-            _ngcontent-hly-c114=""
+            _ngcontent-wyq-c114=""
             href="javascript:void(0);"
             class="dropdown-item"
             >Another actionn</a
           >
         </div>
       </div>
-      <h4 _ngcontent-hly-c114="" class="mb-0">My Profile</h4>
     </div>
+    <h4 _ngcontent-hly-c114="" class="mb-0">My Profile</h4>
   </div>
 
   <div class="text-center p-4 border-bottom">
@@ -47,9 +53,9 @@
       />
     </div>
     <h5 class="font-size-16 mb-1 text-truncate">Admin</h5>
-    <p class=" text-truncate mb-1">
+    <p class="text-truncate mb-1">
       <i
-        class="ri-record-circle-fill font-size-10 text-success me-1 d-inline-block" 
+        class="ri-record-circle-fill font-size-10 text-success me-1 d-inline-block"
       >
       </i>
       Active
@@ -60,7 +66,7 @@
     <div style="position: static" class="ps ps--active-y">
       <div class="ps-content">
         <div class="text-muted">
-          <p class="mb-4" style="color: white;">
+          <p class="mb-4" style="color: white">
             If several languages coalesce, the grammar of the resulting language
             is more simple and regular than that of the individual.
           </p>
@@ -134,11 +140,9 @@
               </button>
             </div>
           </div>
-          </ngb-accordion>
+        </ngb-accordion>
       </div>
-      <div class="ps__rail-x" style="left: 0px; bottom: 0px;">
-
-      </div>
+      <div class="ps__rail-x" style="left: 0px; bottom: 0px"></div>
     </div>
   </perfect-scrollbar>
 </div>
