--- a/src/app/components/side-components/profile/profile.component.html
+++ b/src/app/components/side-components/profile/profile.component.html
@@ -36,7 +36,7 @@
             _ngcontent-wyq-c114=""
             href="javascript:void(0);"
             class="dropdown-item"
-            >Another actionn</a
+            >Another action</a
           >
         </div>
       </div>
