tab activation now working

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
           routerLink="/home/chat"
           routerLinkActive="active"
         >
-          <a id="pills-chat-tab" class="nav-link active">
+          <a id="pills-chat-tab" class="nav-link">
             <i class="ri-message-3-line"></i>
           </a>
         </li>
@@ -40,6 +40,8 @@
           ngbtooltip="Groups"
           class="nav-item"
           ng-reflect-ngb-tooltip="Groups"
+          routerLink="/home/groups"
+          routerLinkActive="active"
         >
           <a id="pills-groups-tab" class="nav-link pills-groups-tab">
             <i class="ri-group-line"></i>
@@ -52,6 +54,7 @@
           class="nav-item"
           ng-reflect-ngb-tooltip="Contacts"
           ng-reflect-placement="top"
+          routerLinkActive="active"
         >
           <a id="pills-contacts-tab" class="nav-link">
             <i class="ri-contacts-line"></i>
@@ -62,6 +65,7 @@
           ngbtooltip="Settings"
           class="nav-item"
           ng-reflect-ngb-tooltip="Settings"
+          routerLinkActive="active"
         >
           <a id="pills-setting-tab" class="nav-link">
             <i class="ri-settings-2-line"></i>
@@ -73,6 +77,7 @@
           placement="top"
           class="nav-item profile-user-dropdown d-inline-block d-lg-none dropup"
           ng-reflect-placement="top"
+          routerLinkActive="active"
         >
           <a
             role="button"
