--- a/src/app/components/side-components/chat-page/chat-page.component.html
+++ b/src/app/components/side-components/chat-page/chat-page.component.html
@@ -1,129 +1,127 @@
 <div class="chat-leftsidebar me-lg-1">
   <div class="tab-content">
     <div class="container">
-      <div class="px-4 pt-4" >
+      <div class="px-4 pt-4">
         <h4 class="chat-title">Chats</h4>
-           
-        <div class="Search ">
-          <input class="form-control sear mt-4" type="search" placeholder="Search messages or users" aria-label="Search">
+
+        <div class="Search">
+          <input
+            class="form-control sear mt-4"
+            type="search"
+            placeholder="Search messages or users"
+            aria-label="Search"
+          />
           <i class="fas fa-search"></i>
         </div>
         <div class="text-muted">
-          <p class="mt-4  " style="color: white; font-size: 1.2rem; font-weight: 500;" >Recent</p>
+          <p
+            class="mt-4"
+            style="color: white; font-size: 1.2rem; font-weight: 500"
+          >
+            Recent
+          </p>
         </div>
       </div>
-        <div class="chat-box mt-4">
-          <div class="chat-block">
-            <div class="imgbx">
-              <img
+      <div class="chat-box mt-4">
+        <div class="chat-block">
+          <div class="imgbx">
+            <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
               src="../../../../assets/profile.png"
             />
             <span class="online_icon"></span>
+          </div>
+          <div class="details">
+            <div class="listHead">
+              <h4>Patrick Hendricks</h4>
+              <p class="time">05min</p>
             </div>
-            <div class="details">
-                <div class="listHead">
-                  <h4>Patrick Hendricks</h4>
-                  <p class="time">05min</p>
-                </div>
-              <div class="message">
-                <p>Hey! there I'm available</p>
-              </div>
-  
+            <div class="message">
+              <p>Hey! there I'm available</p>
             </div>
           </div>
-          
-          <div class="chat-block">
-            <div class="imgbx">
-              <img
+        </div>
+
+        <div class="chat-block">
+          <div class="imgbx">
+            <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
               src="../../../../assets/profile.png"
             />
             <span class="online_icon offline"></span>
+          </div>
+          <div class="details">
+            <div class="listHead">
+              <h4>Mark Messer</h4>
+              <p class="time">12min</p>
             </div>
-            <div class="details">
-                <div class="listHead">
-                  <h4>Mark Messer</h4>
-                  <p class="time">12min</p>
-                </div>
-              <div class="message">
-                <p>Images</p>
-                <b>02</b>
-              </div>
-  
+            <div class="message">
+              <p>Images</p>
+              <b>02</b>
             </div>
           </div>
+        </div>
 
-
-          <div class="chat-block">
-            <div class="imgbx">
-              <img
+        <div class="chat-block">
+          <div class="imgbx">
+            <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
               src="../../../../assets/profile.png"
             />
+          </div>
+          <div class="details">
+            <div class="listHead">
+              <h4>General</h4>
+              <p class="time">20min</p>
             </div>
-            <div class="details">
-                <div class="listHead">
-                  <h4>General</h4>
-                  <p class="time">20min</p>
-                </div>
-              <div class="message">
-                <p>This theme is awesome!</p>
-              </div>
-  
+            <div class="message">
+              <p>This theme is awesome!</p>
             </div>
           </div>
-          <div class="chat-block">
-            <div class="imgbx">
-              <img
+        </div>
+        <div class="chat-block">
+          <div class="imgbx">
+            <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
               src="../../../../assets/profile.png"
             />
             <span class="online_icon"></span>
+          </div>
+          <div class="details">
+            <div class="listHead">
+              <h4>Doris Brown</h4>
+              <p class="time">10:12 AM</p>
             </div>
-            <div class="details">
-                <div class="listHead">
-                  <h4>Doris Brown</h4>
-                  <p class="time">10:12 AM</p>
-                </div>
-              <div class="message">
-                <p>Nice to meet you</p>
-              </div>
-  
+            <div class="message">
+              <p>Nice to meet you</p>
             </div>
           </div>
+        </div>
 
-          <div class="chat-block">
-            <div class="imgbx">
-              <img
+        <div class="chat-block">
+          <div class="imgbx">
+            <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
               src="../../../../assets/profile.png"
             />
-  
+          </div>
+          <div class="details">
+            <div class="listHead">
+              <h4>Designer</h4>
+              <p class="time">12:01 PM</p>
             </div>
-            <div class="details">
-                <div class="listHead">
-                  <h4>Designer</h4>
-                  <p class="time">12:01 PM</p>
-                </div>
-              <div class="message">
-                <p>Next meeting tomorrow 10:00AM</p>
-                <b>01</b>
-              </div>
-  
+            <div class="message">
+              <p>Next meeting tomorrow 10:00AM</p>
+              <b>01</b>
             </div>
           </div>
-
-        
-         </div>
-
-         
-         </div>
-       
+        </div>
+      </div>
+    </div>
   </div>
 </div>
