--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -76,6 +76,16 @@
   box-shadow: 0 2px 4px rgba(15, 34, 58, 0.12);
 }
 
+/* .side-menu-nav .nav-item .nav-link.active {
+  background-color: #3e4a56;
+  color: #7269ef;
+} */
+
+.active {
+  background-color: #3e4a56;
+  color: #7269ef;
+}
+
 .side-menu .navbar-brand-box {
   text-align: center;
 }
@@ -135,25 +145,22 @@ dl {
   border-radius: 50% !important;
 }
 
-
 /* sidebar css  */
 
-
-@media (min-width: 992px){
-.chat-leftsidebar {
+@media (min-width: 992px) {
+  .chat-leftsidebar {
     min-width: 380px;
     max-width: 380px;
-}}
-
-@media (min-width: 992px){
-    .me-lg-1 {
-        margin-right: 0.25rem !important;
-    }
+  }
 }
 
+@media (min-width: 992px) {
+  .me-lg-1 {
+    margin-right: 0.25rem !important;
+  }
+}
 
 .chat-leftsidebar {
-    height: 100vh;
+  height: 100vh;
   background-color: #262e35;
-   
 }
