--- a/src/app/components/side-components/groups/groups.component.html
+++ b/src/app/components/side-components/groups/groups.component.html
@@ -1,1 +1,90 @@
-<p>groups works!</p>
+<div class="groups-page me-lg-1">
+  <div class="container">
+    <div class="px-4 pt-4">
+      <div class="navbar navbar-light">
+        <h3 class="group-title">Groups</h3>
+        <div class="mb-2">
+          <!-- <i class="fas fa-user-friends"></i> -->
+          <i class="ri-group-line" style="font-size: 1.2em"></i>
+        </div>
+      </div>
+      <div class="Search">
+        <input
+          class="form-control search mt-3"
+          type="search"
+          placeholder="Search groups..."
+          aria-label="Search"
+        />
+        <i class="fas fa-search"></i>
+      </div>
+    </div>
+    <div class="group-box">
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#General</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#Reporting</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#Designers</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#Developers</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#Project-alpha</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+      <div class="group-block">
+        <div class="imgbx">
+          <span class="group-name shadow">D</span>
+        </div>
+        <div class="details">
+          <div class="listHead">
+            <h4>#Snacks</h4>
+            <p class="notification">+23</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
