--- a/src/app/components/side-components/groups/groups.component.html
+++ b/src/app/components/side-components/groups/groups.component.html
@@ -21,18 +21,18 @@
     <div class="group-box">
       <div class="group-block">
         <div class="imgbx">
-          <span class="group-name shadow">D</span>
+          <span class="group-name shadow">G</span>
         </div>
         <div class="details">
           <div class="listHead">
             <h4>#General</h4>
-            <p class="notification">+23</p>
+           
           </div>
         </div>
       </div>
       <div class="group-block">
         <div class="imgbx">
-          <span class="group-name shadow">D</span>
+          <span class="group-name shadow">R</span>
         </div>
         <div class="details">
           <div class="listHead">
@@ -48,40 +48,40 @@
         <div class="details">
           <div class="listHead">
             <h4>#Designers</h4>
-            <p class="notification">+23</p>
+            
           </div>
         </div>
       </div>
       <div class="group-block">
         <div class="imgbx">
-          <span class="group-name shadow">D</span>
+            <span class="group-name shadow">D</span>
         </div>
         <div class="details">
           <div class="listHead">
             <h4>#Developers</h4>
-            <p class="notification">+23</p>
+            <p class="notification">New</p>
           </div>
         </div>
       </div>
       <div class="group-block">
         <div class="imgbx">
-          <span class="group-name shadow">D</span>
+          <span class="group-name shadow">P</span>
         </div>
         <div class="details">
           <div class="listHead">
             <h4>#Project-alpha</h4>
-            <p class="notification">+23</p>
+     
           </div>
         </div>
       </div>
       <div class="group-block">
         <div class="imgbx">
-          <span class="group-name shadow">D</span>
+          <span class="group-name shadow">S</span>
         </div>
         <div class="details">
           <div class="listHead">
             <h4>#Snacks</h4>
-            <p class="notification">+23</p>
+      
           </div>
         </div>
       </div>
