--- a/src/app/components/side-components/groups/groups.component.css
+++ b/src/app/components/side-components/groups/groups.component.css
@@ -73,11 +73,11 @@
     position: relative;
     width: 100%;
     display: flex;
-    padding: 2px 35px 0px 40px;
-  
+    padding: 10px 35px 0px 40px;
+    /* margin-top: 3.5em; */
     align-items: center;
     cursor: pointer;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+  
 }
 
 .group-box .group-block .imgbx {
@@ -87,7 +87,7 @@
     overflow: hidden;
     margin-right: 20px;
     margin-bottom: 20px;
-   
+    /* background-color: #7269ef; */
     background-color: #5e548e;
     border-radius: 50%;
 }
@@ -115,16 +115,16 @@
 .group-box .group-block .details .listHead h4 {
     font-size: 0.9em;
     font-weight: 600;
-    margin-top: 0.5em;
-
+    /* margin-top: 0.1em; */
+    margin-bottom: 15px;
     line-height: 0.7px;
 }
 
 .group-box .group-block .details .listHead .notification {
 
-    background: rgb(85, 77, 77);
+    background: rgb(85, 77 , 77);
     line-height: 0.7px;
-    padding: 8px 5px 8px 4px;
+    /* padding: 0px 5px 0px 4px; */
     color: rgb(231, 79, 79);
     text-shadow: 0px 0px 2px red, 0px 0px 1px red;
 
@@ -133,4 +133,7 @@
     justify-content: center;
     align-items: center;
     font-size: 0.70em;
+} 
+.group-block:hover{
+    background: #303841;
 }
