contacts component created

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -54,6 +54,7 @@
           class="nav-item"
           ng-reflect-ngb-tooltip="Contacts"
           ng-reflect-placement="top"
+          routerLink="/home/contacts"
           routerLinkActive="active"
         >
           <a id="pills-contacts-tab" class="nav-link">
