--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -74,18 +74,19 @@
         </li>
 
         <li
-          ngbdropdown=""
+          ngbdropdown
           placement="top"
           class="nav-item profile-user-dropdown d-inline-block d-lg-none dropup"
           ng-reflect-placement="top"
           routerLinkActive="active"
         >
           <a
+            href="javascript: void(0)"
             role="button"
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-            ngbdropdowntoggle=""
+            ngbdropdowntoggle
             class="dropdown-toggle nav-link"
           >
             <img
@@ -94,11 +95,11 @@
               class="profile-user rounded-circle"
             />
           </a>
-          <div ngbdropdownmenu="" class="dropdown-menu">
-            <a class="dropdown-item"
+          <div ngbdropdownmenu class="dropdown-menu">
+            <a class="dropdown-item" href="javascript: void(0)"
               >Profile <i class="ri-profile-line float-end text-muted"></i>
             </a>
-            <a class="dropdown-item"
+            <a class="dropdown-item" href="javascript: void(0)"
               >Setting <i class="ri-settings-3-line float-end text-muted"></i>
             </a>
             <div class="dropdown-divider"></div>
