Contact page created

--- a/src/app/components/side-components/contacts/contacts.component.html
+++ b/src/app/components/side-components/contacts/contacts.component.html
@@ -1,1 +1,89 @@
-<p>contacts works!</p>
+<div class="contact-page me-lg-1">
+  <div class="container">
+    <div class="px-4 pt-4">
+      <div class="navbar navbar-light">
+        <h3 class="contact-title">Contacts</h3>
+        <div class="mb-2">
+          <i
+            class="fas fa-user-plus"
+            title="Add Contact"
+            style="cursor: pointer"
+          ></i>
+        </div>
+      </div>
+      <div class="Search">
+        <input
+          class="form-control search mt-2"
+          type="search"
+          placeholder="Search groups..."
+          aria-label="Search"
+        />
+        <i class="fas fa-search"></i>
+      </div>
+    </div>
+    <div class="contact-box">
+      <div class="contact-block">
+        <h4>A</h4>
+      </div>
+
+      <div class="navbar navbar-light px-5">
+        <h6 class="contacts">Albert Rodarte</h6>
+
+        <div class="mb-2">
+          <i
+            class="fas fa-ellipsis-v"
+            style="cursor: pointer; font-size: 0.9em"
+          ></i>
+        </div>
+      </div>
+      <div class="navbar navbar-light px-5">
+        <h6 class="contacts">Albert Rodarte</h6>
+
+        <div class="mb-2">
+          <i
+            class="fas fa-ellipsis-v"
+            style="cursor: pointer; font-size: 0.9em"
+          ></i>
+        </div>
+      </div>
+      <div class="contact-block mt-4">
+        <h4>C</h4>
+      </div>
+
+      <div class="navbar navbar-light px-5">
+        <h6 class="contacts">Craig Smiley</h6>
+
+        <div class="mb-2">
+          <i
+            class="fas fa-ellipsis-v"
+            style="cursor: pointer; font-size: 0.9em"
+          ></i>
+        </div>
+      </div>
+      <div class="contact-block mt-4">
+        <h4>D</h4>
+      </div>
+
+      <div class="navbar navbar-light px-5">
+        <h6 class="contacts">Daniel Clay</h6>
+
+        <div class="mb-2">
+          <i
+            class="fas fa-ellipsis-v"
+            style="cursor: pointer; font-size: 0.9em"
+          ></i>
+        </div>
+      </div>
+      <div class="navbar navbar-light px-5">
+        <h6 class="contacts">Doris Brown</h6>
+
+        <div class="mb-2">
+          <i
+            class="fas fa-ellipsis-v"
+            style="cursor: pointer; font-size: 0.9em"
+          ></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
